--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,3 @@
-# TODO Proxy /api/* to backend server
-
 user             nginx;
 worker_processes 1;
 error_log        /var/log/nginx/error.log warn;
@@ -33,6 +31,11 @@ http {
 
     location = /50x.html {
       root /usr/share/nginx/html;
+    }
+
+    location /api {
+      # TODO This url should ideally be loaded from the environment
+      proxy_pass http://nfl-rushing-backend:4000/api;
     }
   }
 }
