--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -34,7 +34,9 @@ http {
     }
 
     location /api {
-      # TODO This url should ideally be loaded from the environment
+      # NOTE The url should ideally be loaded from the environment
+      # This is apparently doable, but seems quite involved, so I'll just leave this hack as is
+      # https://serverfault.com/questions/577370/how-can-i-use-environment-variables-in-nginx-conf
       proxy_pass http://nfl-rushing-backend:4000/api;
     }
   }
